fix css z-index for small screen

--- a/styles.css
+++ b/styles.css
@@ -106,6 +106,7 @@ ul {
   padding: 10px 7.5px;
   border-radius: 5px;
   position: absolute;
+  z-index: 10;
   top: 0;
   left: 50%;
   transform: translate(-50%, -120%);
